--- a/public/stylesheets/shared/buttons.css
+++ b/public/stylesheets/shared/buttons.css
@@ -12,7 +12,7 @@
 
 .btn {
   border: 1px solid var(--color-btn-border);
-  border-radius: .5rem;
+  border-radius: 1.5rem;
   padding: .5rem 1rem;
   font-size: 1.2rem;
   font-family: 'Gotham Rounded';
